# pandoc2

./: .ghci  Benchmark.hs  Builder.hs  Definition.hs  Generic.hs  HTML.hs  Makefile  Pandoc.hs  Parser.hs  README  README.markdown  TODO  Types.hs  bench  benchtext.txt  markdown.hs  pandoc2.cabal  pandoc2.hs  shtest.lua  shtest.pl  test1.txt  test2.txt  test3.txt
Tests/: MarkdownTest.pl  markdown
Tests/Markdown_1.0.3/: Amps and angle encoding.test  Auto links.test  Backslash escapes.test  Blockquotes with code blocks.test  Code Spans.test  Hard-wrapped paragraphs with list-like lines.test  Inline HTML (Advanced).test  Inline HTML (Simple).test  Links, inline style.test  Links, reference style.test  Links, shortcut references.test  Markdown Documentation - Basics.test  Markdown Documentation - Syntax.test  Nested blockquotes.test  Ordered and unordered lists.test  Strong and em together.test  Tabs.test  Tidyness.test
Tests/PHP_Markdown/: Backslash escapes.test  Code block in a list item.test  Code block on second line.test  Headers.test  Horizontal Rules.test  Inline HTML (Simple).test  Inline HTML (Span).test  Ins & del.test  MD5 Hashes.test  Parens in URL.test
Tests/Pandoc/: CodeBlocks.html  CodeBlocks.test  CodeBlocks.text  DefinitionLists.html  DefinitionLists.test  DefinitionLists.text  Lists.html  Lists.test  Lists.text  Notes.html  Notes.test  Notes.text  Smart.html  Smart.test  Smart.text
Text/: Pandoc.hs  Pandoc2.hs
Text/Pandoc/: Builder.hs  Definition.hs  Parsing.hs  Refs.hs  Shared.hs
Text/Pandoc/Parsing/: Generic.hs  PMonad.hs  TextTok.hs  Types.hs
Text/Pandoc/Reader/: Markdown.hs
Text/Pandoc/Writer/: HTML.hs
Text/Pandoc2/: Builder.hs  Definition.hs  Shared.hs
Text/Pandoc2/Parsing/: Generic.hs  PMonad.hs  TextTok.hs  Types.hs
Text/Pandoc2/Reader/: Markdown.hs  TeXMath.hs
Text/Pandoc2/Writer/: HTML.hs
tests/Markdown_1.0.3/: Auto links.test  Backslash escapes.test  Code Blocks.test  Code Spans.test  Hard-wrapped paragraphs with list-like lines.test  Horizontal rules.test  Inline HTML (Simple).test  Inline HTML comments.test  Literal quotes in titles.test  Markdown Documentation - Basics.test  Markdown Documentation - Syntax.test  Ordered and unordered lists.test  Tabs.test  Tidyness.test
tests/PHP_Markdown/: Auto Links.test  Backslash escapes.test  Code Spans.test  Code block in a list item.test  Email auto links.test  Emphasis.test  Empty List Item.test  Horizontal Rules.test  Inline HTML (Simple).test  Inline HTML (Span).test  Inline HTML comments.test  Links, inline style.test  MD5 Hashes.test  Mixed OLs and ULs.test  Nesting.test  PHP-Specific Bugs.test  Parens in URL.test  Quotes in attributes.test  Tight blocks.test
tests/Pandoc/: DefinitionLists.test  HTMLBlocksWithMarkdown.test  Lists.test  Notes.test  Strikeout.test  SuperAndSubscript.test
tests/Pandoc2/: compact.test
tests/Pandoc2/math/: mathml.test  plainmath.test
tests/math/: texmath.test
