Name:            pandoc2
Version:         2.0
Cabal-Version:   >= 1.6
Build-Type:      Simple
License:         GPL
License-File:    COPYING
Copyright:       (c) 2011 John MacFarlane
Author:          John MacFarlane <jgm@berkeley.edu>
Maintainer:      John MacFarlane <jgm@berkeley.edu>
Stability:       experimental
Category:        Text
Tested-With:     GHC == 7.0.1
Synopsis:        Conversion between markup formats
Description:     This is a testbed for the next version of pandoc, a Haskell
                 library and program for converting between markup formats.
Data-Files:      README.markdown, COPYING

Library
  Build-Depends: base >= 4 && < 5,
                 containers >= 0.1 && < 0.5,
                 parsec >= 3.1 && < 3.2,
                 blaze-html >= 0.4 && < 0.5,
                 mtl >= 1.1 && < 2.1,
                 filepath >= 1.1 && < 1.3,
                 bytestring >= 0.9 && < 1.0,
                 tagsoup >= 0.12 && < 0.13,
                 uniplate >= 1.6 && < 1.7,
                 text >= 0.11 && < 0.12,
                 network >= 2.2 && < 2.3,
                 cmdargs >= 0.6 && < 0.7,
                 xml >= 1.3 && < 1.4,
                 texmath >= 0.5 && < 0.6
  Ghc-Options:   -Wall -fno-warn-unused-do-bind
  Ghc-Prof-Options: -auto-all -caf-all

  Exposed-Modules: Text.Pandoc2,
                   Text.Pandoc2.Definition,
                   Text.Pandoc2.Builder,
                   Text.Pandoc2.Shared,
                   Text.Pandoc2.Reader.Markdown,
                   Text.Pandoc2.Writer.HTML

  Other-Modules:   Text.Pandoc2.Parsing.Types,
                   Text.Pandoc2.Parsing.Generic,
                   Text.Pandoc2.Parsing.PMonad,
                   Text.Pandoc2.Parsing.TextTok

Executable pandoc2
  Main-Is:            pandoc2.hs
